--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,2 @@
-#
-# Project Properties File
-#
 
-mod_group = com.RlonRyan.MineCommand
-mod_id = MineCommand
-
-build = 0
-
-version_patch = 4
-version_minor = 2
-version_major = 0
-
-version_minecraft = 1.7.10
-version_forge = 10.13.4.1566
-version_java = 1.7
+runDir = ../run
